# UC-Static

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml  env.example
backend/: .dockerignore  .gitignore  Dockerfile  README.md  create_super_user.txt  menu.sh  migrate_and_setup.sh  pyproject.toml  requirements.txt
backend/Uuc_api/: manage.py
backend/Uuc_api/Uuc_api/: asgi.py  production.py  settings.py  urls.py  wsgi.py
backend/Uuc_api/api/: model_spec_cisco.yaml  models.py  serializers.py  urls.py  views.py
backend/Uuc_api/api/backup_configs/: ISB.cfg  KHI.cfg  forti.cfg
backend/Uuc_api/api/helpers/: distribute_tunnel_ip.py  get_tunnel_pool_list.py  interface_table_snmp.py  inventory_builder.py  misc.py
backend/Uuc_api/api/migrations/: 0001_initial.py  0002_auto_20200820_0648.py  0003_auto_20200826_1057.py  0003_auto_20210823_1239.py  0004_auto_20200826_1215.py  0004_hosts_port.py  0005_auto_20200826_1222.py  0006_hosts_hsrp.py  0007_auto_20200910_0941.py  0008_routes.py  0009_auto_20200914_1031.py  0010_auto_20200916_1025.py  0011_hosts_fqdn.py  0012_auto_20201027_1056.py  (+9 more)
backend/Uuc_api/monitoring/: apps.py  constants.py  urls.py  utils.py  views.py
backend/Uuc_api/users/: serializers.py  urls.py  views.py
backend/dns/: forward.uurnikconnect.com  named.conf
backend/dnsupdater/: Dockerfile-dnsupdater  main.py  requirements-dnsupdater.txt
backend/docs/: api.nornir_stuff.rst  api.rst  api.users.rst  conf.py  dependencies.md  deployement.md  modules.rst
backend/scripts/: create_super_user.txt  prestart.sh  run_dev.sh  run_prod.sh
(+150 files in other folders)
